--- a/assets/app/messages/message-input.component.html
+++ b/assets/app/messages/message-input.component.html
@@ -55,7 +55,7 @@
                   formControlName="address">
       </div>
       <div class="form-group">
-          <label for="text">Admission [ Ex: $8 or FREE (if no admission) ]</label>
+          <label for="admission">Admission [ Ex: $8 or FREE (if no admission) ]</label>
           <input
                   type="text"
                   id="admission"
