--- a/assets/app/messages/message.component.html
+++ b/assets/app/messages/message.component.html
@@ -8,7 +8,7 @@
     <div class="twoContainer">
       <p class="eventAddress">{{ message.address }}</p>
       <p class="eventPrice">{{ message.admission }}</p>
-      <p class="eventDate">{{ message.date }}</p>
+      <p class="eventDate">{{ message.month}} {{message.day}}</p>
     </div>
   </div>
   <footer class="eventControls">
