--- a/assets/app/messages/message-input.component.html
+++ b/assets/app/messages/message-input.component.html
@@ -10,13 +10,37 @@
                   formControlName="title">
       </div>
       <div class="form-group">
-          <label for="date">Date [Ex: October 17]</label>
+          <label for="month">Month</label>
+          <select
+                  class="custom-select"
+                  type="text"
+                  id="month"
+                  [ngModel]="message?.type"
+                  class="form-control"
+                  formControlName="month">
+              <option selected>Select Month</option>
+              <option value="1">January</option>
+              <option value="2">February</option>
+              <option value="3">March</option>
+              <option value="4">April</option>
+              <option value="5">May</option>
+              <option value="6">June</option>
+              <option value="7">July</option>
+              <option value="8">August</option>
+              <option value="9">September</option>
+              <option value="10">October</option>
+              <option value="11">November</option>
+              <option value="12">December</option>
+          </select>
+      </div>
+      <div class="form-group">
+          <label for="day">Day [ONLY NUMBERS: 17]</label>
           <input
                   type="text"
-                  id="date"
+                  id="day"
                   class="form-control"
-                  [ngModel]="message?.date"
-                  formControlName="date">
+                  [ngModel]="message?.day"
+                  formControlName="day">
       </div>
       <div class="form-group">
           <label for="description">Description [No more than five reasonably long sentences]</label>
